--- a/MonoLogger/appsettings.json
+++ b/MonoLogger/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    // Express LocalDB connection string for SQL Server 
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Obchod;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "WorkerPool": {
