--- a/MonoLogger/appsettings.json
+++ b/MonoLogger/appsettings.json
@@ -14,6 +14,7 @@
     "MaxThreads": 4
   },
   "UnitTest": {
-    "authTestToken": "unitestToken"
+    "authTestToken": "unitestToken",
+    "testUrl": "ws://localhost:5151/ws"
   }
 }
