--- a/MonoLogger/appsettings.json
+++ b/MonoLogger/appsettings.json
@@ -15,6 +15,6 @@
   },
   "UnitTest": {
     "authTestToken": "unitestToken",
-    "testUrl": "ws://localhost:5151/ws"
+    "testUrl": "ws://localhost:5151/ws/connect"
   }
 }
